--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     },
     "homepage": "https://github.com/thoughtsinbuttermilk/12-ModuleChallenge-EmployeeTracker-sambailey#readme",
     "dependencies": {
+        "cfonts": "^3.2.0",
         "console.table": "^0.10.0",
         "inquirer": "8.2.6",
         "inquirer-list-input": "^0.1.2",
